--- a/projects/01-twitter-follow-card/src/main.css
+++ b/projects/01-twitter-follow-card/src/main.css
@@ -11,5 +11,9 @@ body{
 .App {
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 10px;
+    border: 1px solid #fff;
+    border-radius: 10px;
+    padding: 20px;
+    min-width: 290px;
 }
